--- a/LMS/LMS/Views/Subject/AddSubjects.cshtml
+++ b/LMS/LMS/Views/Subject/AddSubjects.cshtml
@@ -1,11 +1,11 @@
 ﻿@model LMS.Models.SubjectViewModel
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "AddSubjects";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
+<h2>AddSubjects</h2>
 
 @using (Html.BeginForm()) 
 {
@@ -18,20 +18,21 @@
         <div class="form-group">
             @Html.LabelFor(model => model.ProgramId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownListFor(mpdel=> Model.ProgramId , new SelectList(Model.allPrograms , "ProgramId" , "Name") , "Select Program", new {@class = "form-control"})
+                @Html.DropDownListFor(mpdel => Model.ProgramId, new SelectList(Model.allPrograms, "ProgramId", "Name"), "Select Program", new { @class = "form-control" })
 
                 @*@Html.EditorFor(model => model.ProgramId, new {htmlAttributes = new {@class = "form-control"}})*@
                 @Html.ValidationMessageFor(model => model.ProgramId, "", new {@class = "text-danger"})
             </div>
         </div>
 
-        <div class="form-group">
+        @*<div class="form-group">
             @Html.LabelFor(model => model.SubjectId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
+               
                 @Html.EditorFor(model => model.SubjectId, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.SubjectId, "", new { @class = "text-danger" })
             </div>
-        </div>
+        </div>*@
 
         <div class="form-group">
             @Html.LabelFor(model => model.SubjectName, htmlAttributes: new { @class = "control-label col-md-2" })
