--- a/LMS/LMS/Views/Section/Details.cshtml
+++ b/LMS/LMS/Views/Section/Details.cshtml
@@ -1,24 +1,22 @@
 ﻿@model IEnumerable<LMS.Models.StudentViewModel>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Details";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
+<h2>Details</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    Students in this Section
 </p>
 <table class="table">
     <tr>
-       
+      
         <th>
             @Html.DisplayNameFor(model => model.Name)
         </th>
-        <th>
-            @Html.DisplayNameFor(model => model.FatherName)
-        </th>
+      
         <th>
             @Html.DisplayNameFor(model => model.Batch)
         </th>
@@ -31,12 +29,9 @@
 
 @foreach (var item in Model) {
     <tr>
-      
+       
         <td>
             @Html.DisplayFor(modelItem => item.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.FatherName)
         </td>
        
         <td>
@@ -46,16 +41,7 @@
             @Html.DisplayFor(modelItem => item.RollNo)
         </td>
        
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id = item.PersonId }) |
-            @Html.ActionLink("Details", "Details", new { id = item.PersonId }) |
-            @Html.ActionLink("Delete", "Delete", new { id = item.PersonId }) |
-            @if (item.SectionAssigned == 0)
-            { 
-
-                @Html.ActionLink("Assign Section", "AssignSection", new { id = item.PersonId })
-            }
-        </td>
+      
     </tr>
 }
 
