--- a/LMS/LMS/Views/Staff/AddStaff.cshtml
+++ b/LMS/LMS/Views/Staff/AddStaff.cshtml
@@ -5,13 +5,22 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+@{
+    List<String> Genders = new List<string>();
+    Genders.Add("M");
+    Genders.Add("F");
+    ViewBag.Categories = Genders.Select(x => new SelectListItem() { Value = x, Text = x }).ToList();
+
+}
+
+
 <h2>AddStaff</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>StaffViewModel</h4>
         <hr />
@@ -43,7 +52,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Gender, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Gender, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownListFor(model => model.Gender, new SelectList(ViewBag.Categories, "Value", "Text"), "Select Gender", new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.Gender, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -75,7 +84,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.HireDate, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.HireDate, new { htmlAttributes = new { @class = "date-picker" } })
+                @Html.EditorFor(model => model.HireDate, new { htmlAttributes = new { @type = "date", @class = "date-picker" } })
                 @Html.ValidationMessageFor(model => model.HireDate, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -96,12 +105,12 @@
     </div>
 }
 
-    <script type="text/javascript">
+<script type="text/javascript">
     $(function () {
         // This will make every element with the class "date-picker" into a DatePicker element
         $('.date-picker').datepicker();
     })
-    </script>
+</script>
 
 <div>
     @Html.ActionLink("Back to List", "Index")
