--- a/LMS/LMS/Views/Staff/Index.cshtml
+++ b/LMS/LMS/Views/Staff/Index.cshtml
@@ -72,8 +72,9 @@
             @Html.DisplayFor(modelItem => item.MonthlySalary)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.PersonId }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.PersonId })
+            @Html.ActionLink("Edit", "Edit", new { id = item.PersonId }) |
+            @Html.ActionLink("StaffSubject", "StaffSubject", new { id = item.PersonId }) |
+            @Html.ActionLink("Delete", "Delete", new { id = item.PersonId })
         </td>
     </tr>
 }
