--- a/LMS/LMS/Views/Student/Details.cshtml
+++ b/LMS/LMS/Views/Student/Details.cshtml
@@ -11,7 +11,7 @@
     <h4>StudentViewModel</h4>
     <hr />
     <dl class="dl-horizontal">
-       
+
 
         <dt>
             @Html.DisplayNameFor(model => model.Name)
@@ -61,7 +61,7 @@
             @Html.DisplayFor(model => model.ContactNo)
         </dd>
 
-       
+
 
         <dt>
             @Html.DisplayNameFor(model => model.Batch)
@@ -94,11 +94,52 @@
         <dd>
             @Html.DisplayFor(model => model.AdmissionDate)
         </dd>
+        <dd>
+            @Html.ActionLink("ViewSubjects", "ViewSubjects", new { id = Model.PersonId }) 
+        </dd>
 
-     
 
     </dl>
 </div>
+
+@*<table class="table">
+    <tr>
+
+        <th>
+            @Html.DisplayNameFor(model => model.StudentId)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.SubjectId)
+        </th>
+        @*<th>
+                @Html.DisplayNameFor(model => model.Batch)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.RollNo)
+            </th>
+
+        <th></th>
+    </tr>
+
+    @foreach (var item in Model.allsubjects)
+    {
+        <tr>
+
+                <td>
+                    @Html.DisplayFor(modelItem => item.SubjectId)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.SubjectName)
+                </td>
+
+                
+
+
+            </tr>
+    }
+
+</table>*@
+
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.PersonId }) |
     @Html.ActionLink("Back to List", "Index")
