--- a/LMS/LMS/Views/Staff/Index.cshtml
+++ b/LMS/LMS/Views/Staff/Index.cshtml
@@ -74,6 +74,7 @@
         <td>
             @Html.ActionLink("Edit", "Edit", new { id = item.PersonId }) |
             @Html.ActionLink("StaffSubject", "StaffSubject", new { id = item.PersonId }) |
+            @Html.ActionLink("ViewStaffSubjects", "ViewStaffSubjects", new { id = item.PersonId }) |
             @Html.ActionLink("Delete", "Delete", new { id = item.PersonId })
         </td>
     </tr>
