--- a/LMS/LMS/Views/Section/EditSection.cshtml
+++ b/LMS/LMS/Views/Section/EditSection.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "EditSection";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_Admin_Layout.cshtml";
 }
 
 <h2>EditSection</h2>
