--- a/LMS/LMS/Views/Student/AssignSection.cshtml
+++ b/LMS/LMS/Views/Student/AssignSection.cshtml
@@ -3,7 +3,7 @@
 
 @{
     ViewBag.Title = "AssignSection";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_Admin_Layout.cshtml";
 }
 
 <h2>AssignSection</h2>
