--- a/LMS/LMS/Views/Subject/AddSubjects.cshtml
+++ b/LMS/LMS/Views/Subject/AddSubjects.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "AddSubjects";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_Admin_Layout.cshtml";
 }
 
 <h2>AddSubjects</h2>
