--- a/LMS/LMS/Views/TimeTable/DeleteTimeTable.cshtml
+++ b/LMS/LMS/Views/TimeTable/DeleteTimeTable.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "DeleteTimeTable";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_Admin_Layout.cshtml";
 }
 
 <h2>DeleteTimeTable</h2>
