--- a/LMS/LMS/Views/Program/AddProgram.cshtml
+++ b/LMS/LMS/Views/Program/AddProgram.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "AddProgram";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_Admin_Layout.cshtml";
 }
 
 <h2>AddProgram</h2>
