--- a/LMS/LMS/Views/Program/EditProgram.cshtml
+++ b/LMS/LMS/Views/Program/EditProgram.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "EditProgram";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_Admin_Layout.cshtml";
 }
 
 <h2>EditProgram</h2>
