--- a/LMS/LMS/Views/Section/AddSection.cshtml
+++ b/LMS/LMS/Views/Section/AddSection.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "AddSection";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_Admin_Layout.cshtml";
 }
 
 <h2>AddSection</h2>
