--- a/LMS/LMS/Views/Staff/StaffAttendance.cshtml
+++ b/LMS/LMS/Views/Staff/StaffAttendance.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "StaffAttendance";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_Admin_Layout.cshtml";
 }
 
 <h2>StaffAttendance</h2>
