--- a/LMS/LMS/Views/Staff/StaffSubject.cshtml
+++ b/LMS/LMS/Views/Staff/StaffSubject.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "StaffSubject";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_Admin_Layout.cshtml";
 }
 
 <h2>StaffSubject</h2>
