--- a/LMS/LMS/Views/Staff/ViewStaffSubjects.cshtml
+++ b/LMS/LMS/Views/Staff/ViewStaffSubjects.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "ViewStaffSubjects";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_Admin_Layout.cshtml";
 
     //var list = Model.allsubjects;
 }
