--- a/LMS/LMS/Views/Student/ViewSubjects.cshtml
+++ b/LMS/LMS/Views/Student/ViewSubjects.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "ViewSubjects";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_Admin_Layout.cshtml";
 
     var list = Model.allsubjects;
 }
