--- a/LMS/LMS/Views/Subject/EditSubjects.cshtml
+++ b/LMS/LMS/Views/Subject/EditSubjects.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "EditSubjects";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_Admin_Layout.cshtml";
 }
 
 <h2>EditSubjects</h2>
