--- a/LMS/LMS/Views/Subject/ViewSubjects.cshtml
+++ b/LMS/LMS/Views/Subject/ViewSubjects.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "ViewSubjects";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_Admin_Layout.cshtml";
 }
 
 <h2>ViewSubjects</h2>
