--- a/LMS/LMS/Views/TimeTable/TimeTableDetails.cshtml
+++ b/LMS/LMS/Views/TimeTable/TimeTableDetails.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "TimeTableDetails";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_Admin_Layout.cshtml";
 }
 
 <h2>TimeTableDetails</h2>
