--- a/LMS/LMS/Views/Section/AddSection.cshtml
+++ b/LMS/LMS/Views/Section/AddSection.cshtml
@@ -2,20 +2,27 @@
 
 @{
     ViewBag.Title = "AddSection";
-    Layout = "~/Views/Shared/_Admin_Layout.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>AddSection</h2>
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>SectionViewModel</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-       
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.ProgramsList, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownListFor(model => model.ProgramId, new SelectList(Model.ProgramsList, "ProgramId", "Name"), "Select Program", new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.ProgramId, "", new { @class = "text-danger" })
+            </div>
+        </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.SectionName, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -33,7 +40,7 @@
             </div>
         </div>
 
-      
+
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
