--- a/LMS/LMS/Views/Section/Delete.cshtml
+++ b/LMS/LMS/Views/Section/Delete.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "Delete";
-    Layout = "~/Views/Shared/_Admin_Layout.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>Delete</h2>
@@ -12,8 +12,13 @@
     <h4>SectionViewModel</h4>
     <hr />
     <dl class="dl-horizontal">
-        
 
+        <dt>
+            @Html.DisplayNameFor(model => model.ProgramName)
+        </dt>
+        <dt>
+            @Html.DisplayFor(model => model.ProgramName)
+        </dt>
         <dt>
             @Html.DisplayNameFor(model => model.SectionName)
         </dt>
@@ -40,7 +45,8 @@
 
     </dl>
 
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
