--- a/LMS/LMS/Views/Section/EditSection.cshtml
+++ b/LMS/LMS/Views/Section/EditSection.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "EditSection";
-    Layout = "~/Views/Shared/_Admin_Layout.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>EditSection</h2>
@@ -10,12 +10,21 @@
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>SectionViewModel</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        
+
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.ProgramName, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.ProgramName, new { htmlAttributes = new { @readonly = "readonly", @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.ProgramName, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
 
         <div class="form-group">
             @Html.LabelFor(model => model.SectionName, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -33,7 +42,7 @@
             </div>
         </div>
 
-     
+
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
