--- a/LMS/LMS/Views/Section/Index.cshtml
+++ b/LMS/LMS/Views/Section/Index.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "Index";
-    Layout = "~/Views/Shared/_Admin_Layout.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>Index</h2>
@@ -12,7 +12,9 @@
 </p>
 <table class="table">
     <tr>
-        
+        <th>
+            @Html.DisplayNameFor(model => model.ProgramName)
+        </th>
         <th>
             @Html.DisplayNameFor(model => model.SectionName)
         </th>
@@ -25,24 +27,27 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-      
-        <td>
-            @Html.DisplayFor(modelItem => item.SectionName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Batch)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.TotalStudents)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.SectionId }) |
-            @Html.ActionLink("Details", "Details", new { id=item.SectionId }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.SectionId })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.ProgramName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.SectionName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Batch)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.TotalStudents)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.SectionId }) |
+                @Html.ActionLink("Details", "Details", new { id = item.SectionId }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.SectionId })
+            </td>
+        </tr>
+    }
 
 </table>
