--- a/LMS/LMS/Views/Staff/StaffAttendance.cshtml
+++ b/LMS/LMS/Views/Staff/StaffAttendance.cshtml
@@ -24,13 +24,27 @@
         </div>
     </div>
 
-    <div class="form-group">
+    <table class="table">
+        <tr>
+            <th>
+                Mark
+            </th>
+            <th>
+                Name
+            </th>
+            <th>
+                Designation
+            </th>
+        </tr>
 
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.Staffs, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Staffs, "", new { @class = "text-danger" })
+        <div class="form-group">
+
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Staffs, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Staffs, "", new { @class = "text-danger" })
+            </div>
         </div>
-    </div>
+    </table>
 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
