--- a/LMS/LMS/Views/Student/Index.cshtml
+++ b/LMS/LMS/Views/Student/Index.cshtml
@@ -51,6 +51,7 @@
             @Html.ActionLink("Details", "Details", new { id = item.PersonId }) |
             @Html.ActionLink("Delete", "Delete", new { id = item.PersonId }) |
             @Html.ActionLink("AddSubject", "AddSubject", new { id = item.PersonId }) |
+            @Html.ActionLink("Result", "ResultIndex", new { id = item.PersonId }) |
             @if (item.SectionAssigned == 0)
             {
 
