--- a/LMS/LMS/Views/Exam/AddDateSheet.cshtml
+++ b/LMS/LMS/Views/Exam/AddDateSheet.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "AddDateSheet";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_Admin_Layout.cshtml";
 }
 
 <h2>AddDateSheet</h2>
@@ -15,14 +15,7 @@
     <h4>ExamSubjectsViewModel</h4>
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-    <div class="form-group">
-        @Html.LabelFor(model => model.ExamId, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.DropDownListFor(mpdel => Model.ExamId, new SelectList(Model.ExamNames, "ExamId", "Name"), "Select Exam", new { @class = "form-control" })
-
-            @Html.ValidationMessageFor(model => model.ExamId, "", new { @class = "text-danger" })
-        </div>
-    </div>
+    @Html.HiddenFor(model => model.ExamId)
 
     <div class="form-group">
         @Html.LabelFor(model => model.SubjectId, htmlAttributes: new { @class = "control-label col-md-2" })
