--- a/LMS/LMS/Views/Exam/Add_EditExam.cshtml
+++ b/LMS/LMS/Views/Exam/Add_EditExam.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "Add_EditExam";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_Admin_Layout.cshtml";
 }
 
 <h2>Add_EditExam</h2>
