--- a/LMS/LMS/Views/Exam/DateSheetIndex.cshtml
+++ b/LMS/LMS/Views/Exam/DateSheetIndex.cshtml
@@ -2,13 +2,13 @@
 
 @{
     ViewBag.Title = "DateSheetIndex";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_Admin_Layout.cshtml";
 }
 
 <h2>DateSheetIndex</h2>
 
 <p>
-    @Html.ActionLink("Create New", "AddDateSheet")
+    @Html.ActionLink("Create New", "AddDateSheet", new { id = ViewBag.ExamId })
 </p>
 <table class="table">
     <tr>
