--- a/LMS/LMS/Views/Exam/EditDateSheet.cshtml
+++ b/LMS/LMS/Views/Exam/EditDateSheet.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "EditDateSheet";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_Admin_Layout.cshtml";
 }
 
 <h2>EditDateSheet</h2>
