--- a/LMS/LMS/Views/Exam/Index.cshtml
+++ b/LMS/LMS/Views/Exam/Index.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "Index";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_Admin_Layout.cshtml";
 }
 
 <h2>Index</h2>
@@ -27,7 +27,9 @@
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.ExamId }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ExamId })
+            @Html.ActionLink("Delete", "Delete", new { id=item.ExamId })|
+            @Html.ActionLink("DateSheet", "DateSheetIndex", new { id = item.ExamId })
+
         </td>
     </tr>
 }
