--- a/LMS/LMS/Views/Result/EditResult.cshtml
+++ b/LMS/LMS/Views/Result/EditResult.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "EditResult";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_Admin_Layout.cshtml";
 }
 
 <h2>EditResult</h2>
