--- a/LMS/LMS/Views/Staff/Index.cshtml
+++ b/LMS/LMS/Views/Staff/Index.cshtml
@@ -9,6 +9,8 @@
 
 <p>
     @Html.ActionLink("Create New", "Create")
+
+    <a href=@Url.Action("Export", "Staff") class="btn btn-primary" type="button">Generate PDF</a>
 </p>
 <table class="table">
     <tr>
