--- a/LMS/LMS/Views/Student/Index.cshtml
+++ b/LMS/LMS/Views/Student/Index.cshtml
@@ -52,6 +52,7 @@
             @Html.ActionLink("Delete", "Delete", new { id = item.PersonId }) |
             @Html.ActionLink("AddSubject", "AddSubject", new { id = item.PersonId }) |
             @Html.ActionLink("Result", "ResultIndex", new { id = item.PersonId }) |
+            @Html.ActionLink("Attendance Report", "AttendanceReport", new { id = item.PersonId }) |
             @if (item.SectionAssigned == 0)
             {
 
