--- a/LMS/LMS/Views/Staff/Index.cshtml
+++ b/LMS/LMS/Views/Staff/Index.cshtml
@@ -77,6 +77,7 @@
             @Html.ActionLink("Edit", "Edit", new { id = item.PersonId }) |
             @Html.ActionLink("StaffSubject", "StaffSubject", new { id = item.PersonId }) |
             @Html.ActionLink("ViewStaffSubjects", "ViewStaffSubjects", new { id = item.PersonId }) |
+            @Html.ActionLink("Attendance Report", "AttendanceReport", new { id = item.PersonId }) |
             @Html.ActionLink("Delete", "Delete", new { id = item.PersonId })
         </td>
     </tr>
