--- a/LMS/LMS/Views/Shared/_Admins_Layout.cshtml
+++ b/LMS/LMS/Views/Shared/_Admins_Layout.cshtml
@@ -4,7 +4,6 @@
     <meta name="viewport" content="width=device-width" />
     <script src="~/Scripts/jquery-3.3.1.min.js"></script>
     <link href="~/Content/StyleSheet1.css" rel="stylesheet"/>
-    <script src="~/Scripts/JavaScript.js"></script>
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" id="bootstrap-css"  />
     <script src="~/Scripts/bootstrap.min.js"></script>
     <title>@ViewBag.Title</title>
@@ -170,16 +169,7 @@
             </div>
             <!-- Top Menu Items -->
             <ul class="nav navbar-right top-nav">
-                 
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Admin User<b class="fa fa-angle-down"></b></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#"><i class="fa fa-fw fa-user"></i> Edit Profile</a></li>
-                        <li><a href="#"><i class="fa fa-fw fa-cog"></i> Change Password</a></li>
-                        <li class="divider"></li>
-                        <li><a href="#"><i class="fa fa-fw fa-power-off"></i> Logout</a></li>
-                    </ul>
-                </li>
+                 @Html.Partial("_LoginPartial")
             </ul>
             <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
             <div class="collapse navbar-collapse navbar-ex1-collapse">
@@ -259,4 +249,15 @@
      
 </body>
 </html>
- 
+ <script>
+     $(function () {
+         $('[data-toggle="tooltip"]').tooltip();
+         $(".side-nav .collapse").on("hide.bs.collapse", function () {
+             $(this).prev().find(".fa").eq(1).removeClass("fa-angle-right").addClass("fa-angle-down");
+         });
+         $('.side-nav .collapse').on("show.bs.collapse", function () {
+             $(this).prev().find(".fa").eq(1).removeClass("fa-angle-down").addClass("fa-angle-right");
+         });
+     })
+
+ </script>
